# Author: Dominik Harmim <xharmi00@stud.fit.vutbr.cz>

CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

PROJECT(feedreader)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS_DEBUG
	"${CMAKE_CXX_FLAGS} -W -Wall -Wextra -Werror -pedantic -g -D DEBUG"
	)
SET(CMAKE_CXX_FLAGS_RELEASE
	"${CMAKE_CXX_FLAGS} -W -Wall -Wextra -Werror -pedantic -O2"
	)

FILE(GLOB SOURCES "src/*.cpp")
FILE(GLOB HEADERS "src/*.hpp")

FIND_PACKAGE(LibXml2 REQUIRED)
EXECUTE_PROCESS(COMMAND xml2-config --libs OUTPUT_VARIABLE LIBXML2_LIBS)
STRING(STRIP "${LIBXML2_LIBS}" LIBXML2_LIBS)
EXECUTE_PROCESS(COMMAND xml2-config --cflags OUTPUT_VARIABLE LIBXML2_CFLAGS)
STRING(STRIP "${LIBXML2_CFLAGS}" LIBXML2_CFLAGS)
ADD_DEFINITIONS(${LIBXML2_CFLAGS})

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ssl crypto ${LIBXML2_LIBS})
